fix light dark mode for profile dropdown

--- a/PopFlix/src/assets/main.css
+++ b/PopFlix/src/assets/main.css
@@ -101,6 +101,8 @@ body,
   --selected-border: #e53935;
   --selected-box-shadow: rgba(229, 57, 53, 0.2);
   --info-hover: #ff4444;
+  --dropdown-divider: rgba(82, 82, 82, 0.1);
+  --dropdown-hover: rgba(98, 97, 97, 0.08);
 }
 
 html.dark {
@@ -166,6 +168,8 @@ html.dark {
   --selected-border: #ffffff;
   --selected-box-shadow: rgba(253, 253, 253, 0.5);
   --info-hover: #252a3d;
+  --dropdown-divider: rgba(255, 255, 255, 0.1);
+  --dropdown-hover: rgba(255, 255, 255, 0.08);
 }
 
 .premium-label {
